python-apt (0.8.0ubuntu10) UNRELEASEDoneiric-updates; urgency=low

  * aptsources/sourceslist.py:
    - import distinfo from the same dir (LP: #871007)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 10 Oct 2011 11:13:20 +0200

python-apt (0.8.0ubuntu9) oneiric; urgency=low

  * apt/progress/gtk2.py:
    - update to the latest vte API for child-exited (LP: #865388)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 04 Oct 2011 16:35:52 +0200

python-apt (0.8.0ubuntu8) oneiric; urgency=low

  * add concept of "ParentComponent" for e.g. ubuntu/multiverse
    that needs universe enabled as well (plus add test)
    LP: #829284

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 28 Sep 2011 16:27:20 +0200

python-apt (0.8.0ubuntu7) oneiric; urgency=low

  * aptsources/distinfo.py:
    - make mirror a valid protocol name
  * utils/get_ubuntu_mirrors_from_lp.py:
    - add "mirror://mirrors.ubuntu.com/mirrors.txt" to the 
      default mirror list

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 11 Aug 2011 15:38:06 +0200

python-apt (0.8.0ubuntu6) oneiric; urgency=low

  * debian/control:
    - remove recommends of python2.6
  * tests/test_all.py:
    - print library dir during the tests to hunt down mysterious build
      failure on amd64

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 10 Aug 2011 06:12:30 +0200

python-apt (0.8.0ubuntu5) oneiric; urgency=low

  * setup.py:
    - enable extra builds too

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 09 Aug 2011 16:05:09 +0200

python-apt (0.8.0ubuntu4) oneiric; urgency=low

  * apt/package.py:
    - fix py3 compatbility with print

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 09 Aug 2011 16:04:04 +0200

python-apt (0.8.0ubuntu3) oneiric; urgency=low

  * aptsources/sourceslist.py:
    - fix py3.2 compat issue that causes FTBFS on amd64 tests

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 08 Aug 2011 22:48:43 +0200

python-apt (0.8.0ubuntu2) oneiric; urgency=low
